--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -1,47 +1,59 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "7b3022a8-4568-4f19-8e19-4750fcaf712b",
+   "metadata": {},
+   "source": [
+    "# Hyper Cube Solver\n",
+    "Being done with the 3x3 Rubiks cube solver I think its time we go one building a hypercube solver in python. I am not sure what challenges I will face, but as they say \"Don't give up\". This code is completly inspired from my previous 3x3 rubiks cube solver  ***Erno's Enigma*** code written in C language."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b70b8ea-26c8-49b1-b64e-c0a6d5c6b4e8",
+   "metadata": {},
+   "source": [
+    "This block of code takes the input from the user about the Dimensions of the cube. May be anything from 2 to n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "0668fd73-2b06-431b-8450-6cacbb72e0c3",
+   "execution_count": 20,
+   "id": "93b7c5bb-ccb7-4426-b191-92ad9a1215b0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Using backend: tensorflow.compat.v1\n",
-      "Other supported backends: tensorflow, pytorch, jax, paddle.\n",
-      "paddle supports more examples now and is recommended.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\Arush Chinchkhede\\anaconda3\\Lib\\site-packages\\deepxde\\backend\\tensorflow_compat_v1\\tensor.py:25: The name tf.disable_v2_behavior is deprecated. Please use tf.compat.v1.disable_v2_behavior instead.\n",
-      "\n",
-      "WARNING:tensorflow:From C:\\Users\\Arush Chinchkhede\\anaconda3\\Lib\\site-packages\\tensorflow\\python\\compat\\v2_compat.py:98: disable_resource_variables (from tensorflow.python.ops.resource_variables_toggle) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "non-resource variables are not supported in the long term\n"
+      "enter the size of matrix :  3\n"
      ]
     }
    ],
    "source": [
-    "import deepxde as dde\n",
-    "import matplotlib.pyplot as plt\n",
-    "from deepxde.backend import tf\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "# n represents the dimension of cube\n",
+    "n = int(input(\"enter the size of matrix : \"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c4d2799-4c5f-4e1e-a5bb-f79c138f2b9f",
+   "metadata": {},
+   "source": [
+    "Now that we got the dimension of our cube, its time to set up a matrix that would virtually represent our rubiks cube"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83e8aabe-4db1-41e3-ad16-d626d6515d01",
+   "id": "fa7d9770-5266-42d0-867a-bff9bd599c79",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Cube is the name of n*n array that represnts the state of rubik's cube\n",
+    "cube = ["
+   ]
   }
  ],
  "metadata": {
